# hyprfloat

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
src/hyprfloat/: __init__.py  db_helper.py  hyprfloat.py  settings.py  utils.py
