[build-system]
requires = ['setuptools>=64.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'hyprfloat'
version = "0.2.1"
authors = [
	{ name='Nevimmu', email='nevimmu@gmail.com' },
]
description = 'Float the terminal in empty workplace'
readme = 'README.md'
license = { file = 'LICENSE' }
requires-python = '>=3.7'

[project.urls]
'Homepage' = 'https://github.com/nevimmu/hyprfloat'
'Bug Tracker' = 'https://github.com/nevimmu/hyprfloat/issues'

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hyprfloat = 'hyprfloat:main'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
	'src/hyprfloat/settings.py'
]